FB-3 : Add MapStruct